--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </thead>
         <tbody>
         <tr>
-            <td><input type="number" id="team1" value="0"/></td>
-            <td><input type="number" id="team2" value="0"/></td>
+            <td><input type="number" id="team1" value=0/></td>
+            <td><input type="number" id="team2" value=0/></td>
         </tr>
         </tbody>
     </table>
