--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
         result_t2 = (parseFloat(t2) + parseFloat(past_value_2));
         document.getElementById("demo2").value = result_t1;
         document.getElementById("demo3").value = result_t2;
-    }
+if(document.getElementById("team1").value == Nan) 
+   document.getElemntById("team1").value =0)
+ }
 </script>
 </body>
 </html>
