edit complete actions

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@ var list2 = [];
         document.getElementById("demo3").value = result_t2;
         ekhtelaf = result_t1 - result_t2;
         document.getElementById("ekhtelaf").value = ekhtelaf;
-        list1.push(result_t1);
-        list2.push(result_t2);
+        list1.push(t1);
+        list2.push(t2);
         len = list1.length;
         text = "<ul>";
         for (i = 0; i < len; i++){
