--- a/index.html
+++ b/index.html
@@ -105,5 +105,19 @@ document.getElementById("demo3").value=0;
 document.getElementById("ekhtelaf").value=0;
 }
 </script>
+<style>
+body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: #16a085 ;
+
+}
+
+</style>
 </body>
 </html>
