--- a/index.html
+++ b/index.html
@@ -98,7 +98,12 @@ var list2 = [];
   element.classList.toggle("dark-mode");
 }
 function zero(){
-  document.getElementById("team1").value=0;
+    var team1sum, team2sum;
+document.getElementById("demo2").value = team1sum;
+document.getElementById("demo3").value = team2sum;
+documnet.getElementById("history1").value = team1sum;    
+    documnet.getElementById("history2").value = team2sum;
+document.getElementById("team1").value=0;
 document.getElementById("team2").value=0;
 document.getElementById("demo2").value=0;
 document.getElementById("demo3").value=0;
